# airspan-cpe

./: README.md
cpe-automation/: LICENSE  README.md  poetry.toml  pyproject.toml
cpe-automation/app/: __init__.py  main.py
cpe-automation/app/api/endpoints/: airspan.py
cpe-automation/app/core/: config.py  main_page_html.html
cpe-automation/app/core/airspan/: device_AT_command_page.py  device_view_page.py  element_locators.py  home_page.py  login_page.py  statatics.py
cpe-automation/app/core/browsers/: chrome.py
